// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reports are formatted to datums: current month request data 1`] = `
Array [
  Object {
    "key": "1-15-18",
    "name": "1-15-18",
    "units": "unit",
    "x": 15,
    "y": 1,
  },
]
`;

exports[`reports are formatted to datums: current month usage data 1`] = `
Array [
  Object {
    "key": "12-15-17",
    "name": "12-15-17",
    "units": "unit",
    "x": 15,
    "y": 1,
  },
]
`;

exports[`reports are formatted to datums: previous month request data 1`] = `
Array [
  Object {
    "key": "1-15-18",
    "name": "1-15-18",
    "units": "unit",
    "x": 15,
    "y": 0,
  },
]
`;

exports[`reports are formatted to datums: previous month usage data 1`] = `
Array [
  Object {
    "key": "12-15-17",
    "name": "12-15-17",
    "units": "unit",
    "x": 15,
    "y": 0,
  },
]
`;

exports[`trend is a daily value: current month data 1`] = `
Array [
  Object {
    "date": "1-15-18",
    "values": Array [
      Object {
        "date": "1-15-18",
        "usage": Object {
          "units": "unit",
          "value": 1,
        },
      },
    ],
  },
  Object {
    "date": "1-16-18",
    "values": Array [
      Object {
        "date": "1-16-18",
        "usage": Object {
          "units": "unit",
          "value": 2,
        },
      },
    ],
  },
]
`;

exports[`trend is a running total: current month data 1`] = `
Array [
  Object {
    "date": "1-15-18",
    "values": Array [
      Object {
        "date": "1-15-18",
        "usage": Object {
          "units": "unit",
          "value": 1,
        },
      },
    ],
  },
  Object {
    "date": "1-16-18",
    "values": Array [
      Object {
        "date": "1-16-18",
        "usage": Object {
          "units": "unit",
          "value": 2,
        },
      },
    ],
  },
]
`;
